AKAPPEND: ensure we always insert with a valid date

Latest MySQL does not like null datetime for some reason, so make sure
we always have a valid date on INSERT.

BUG: 373782
FIXED-IN: 5.4.1